2012-08-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile:
	* Sources/GNUmakefile: Revert error made by Riccardo while
	changing the makefiles.

2012-08-27 18:59-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Sources/WebHTMLDocumentView.m: Same fix as below.

2012-08-27 18:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Sources/DOMCSS.m: Fix double include problem. #import was including
	the DOMHTML.h file twice since it was both in the current directory
	and in the derived_src directory.

2012-08-**  Nikolaus Schaller <hns@computer.org>
	* reworked CSS processing to provide computedStyleForElement:pseudoElement:
	* reworked spliceTo: to translate CSS to NSAttributedString attributes
	* added default.css to define HTML4 -> CSS translation
	* removed (almost) all direct translation of attributes to style (attributes remain used for forms and table layout)
	* fixed parsing of tag[attribute=value] style
	* fixed white-space merging rules so that normal, pre and nowrap are working

2012-01-19 Riccardo Mottola <rm@gnu.org>

	* Sources/DOMHTML.m
	Revert.

2012-01-18 Riccardo Mottola <rm@gnu.org>

	* Sources/DOMHTML.m
	Really copy value to cell.

2011-05-16  Nikolaus Schaller <hns@computer.org>
	* fixed issue in scanning <script>...</script>
	* fixed signature of - (NSView <WebDocumentView> *) documentView;
	* checked with Clang for potential issues and fixed two potential leaks
	* optimized CSS parser a little

2011-04-14  Nikolaus Schaller <hns@computer.org>
	* fixed bug in DOMCSSValueList which resulted in delayed segfault in NSArrayEnumerator
	* minor cosmetics

2010-10-24 Riccardo Mottola <rmottola@users.sf.net>

	* Sources/DOMCSS.m
	Fixed some c99-isms

2010-10-23  Nikolaus Schaller <hns@computer.org>

	* fixed issue with <noframes> (which was counted as <frame> when determining the number of rows/columns of a <frameset>)
	* fixed problem with processing CSS values as strings