@@ -6,6 +6,7 @@
 eins:<input type="text" name="eins" value="eins"></input>
 zwei:<input type="text" name="zwei" value="zwei"></input>
 drei:<input type="text" name="drei" value="drei"></input>
+button:<input type="button" name="d" value="Button"></input>
 </form>
 <hr>
 <form>
